# ocsf-validator

./: .tool-versions  Dockerfile  README.md  build.sh  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ocsf-validator.yml  test.yml
ocsf_validator/: __init__.py  __main__.py  errors.py  matchers.py  patterns.py  processor.py  processors.py  reader.py  runner.py  type_mapping.py  types.py  validators.py
tests/: test_attrs.py  test_dependencies.py  test_extends.py  test_include.py  test_mapping.py  test_matchers.py  test_profiles.py  test_reader.py  test_types.py  test_validators.py
