[tool.poetry]
name = "ocsf-validator"
version = "0.1.2"
description = "OCSF Schema Validation"
authors = ["Jeremy Fisher <jeremy@query.ai>"]
readme = "README.md"
packages = [{include = "ocsf_validator"}]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^2.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
pytest = "^7.4.2"
pyright = "^1.1.327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
