[tool.poetry]
name = "ocsf-validator"
version = "0.1.5"
description = "OCSF Schema Validation"
authors = ["Jeremy Fisher <jeremy@query.ai>", "Alan Pinkert <apinkert@cisco.com>"]
readme = "README.md"
packages = [{include = "ocsf_validator"}]

[tool.poetry.dependencies]
jsonschema = "^4.21.1"
python = "^3.11"
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
pytest = "^7.4.2"
pyright = "^1.1.327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
